--- a/cookie-stand/cookie-stand/cookie-stand.csproj
+++ b/cookie-stand/cookie-stand/cookie-stand.csproj
@@ -8,18 +8,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\**" />
+    <Compile Remove="Models\Interfaces\**" />
+    <Compile Remove="Models\Services\**" />
+    <Content Remove="Controllers\**" />
+    <Content Remove="Models\Interfaces\**" />
+    <Content Remove="Models\Services\**" />
+    <EmbeddedResource Remove="Controllers\**" />
+    <EmbeddedResource Remove="Models\Interfaces\**" />
+    <EmbeddedResource Remove="Models\Services\**" />
+    <None Remove="Controllers\**" />
+    <None Remove="Models\Interfaces\**" />
+    <None Remove="Models\Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\Interfaces\" />
-    <Folder Include="Models\Services\" />
   </ItemGroup>
 
 </Project>
