--- a/cookie-stand/cookie-stand/appsettings.json
+++ b/cookie-stand/cookie-stand/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "JWT": {
+    "Secret": "asdfljasdfl9safljfgytyfdc0"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CookiStandDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
